fixed mobile menu icon alignment in header style 1

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16449,3 +16449,19 @@ img.lazy-image.loaded {
 .main-header .header-upper .upper-right .info-box .call a:hover {
 	color: #24a77e !important;
 }
+ 
+ /* --- Header Style 1 Alignment Fix --- */
+ .main-header.header-style-one .header-lower .inner {
+     padding-right: 25px !important; /* Reset 215px padding intended for absolute button */
+ }
+ 
+ @media only screen and (max-width: 991px) {
+     .main-header.header-style-one .header-lower .inner {
+         padding-left: 15px !important;
+         padding-right: 15px !important;
+     }
+     .main-header.header-style-one .header-lower .nav-outer {
+         float: right;
+         margin-right: 0;
+     }
+ }
